# dpli

./: .clang-format  .gitignore  CMakeLists.txt  Hello.g4  LICENSE  Main.cpp  Main.hpp  README.md  acceptanceTest.dpl  bench.sh  compile.bat  compile.sh  generate_coverage.sh  generate_tree.sh  linter.sh  memcheck.sh  result.csv  run  run_tests.sh  test.sh  trash
.github/workflows/: build_and_test.yml  cmake-multi-platform.yml  linting.yml
cmake/: AddCatch2.cmake  AddSnitch.cmake  Antlr4Package.md  ExternalAntlr4Cpp.cmake  antlr4-generator.cmake.in
docs/examples/: break.dpl  continue.dpl  gcd.dpl  hello_world.dpl  if_node.dpl  infinite_loop.dpl  loop_x_times.dpl  math.dpl  not_and_or.dpl  quicksort.dpl  replace_with.dpl  std_library.dpl  table_operation.dpl  test.dpl  test_all.dpl  while_node.dpl
docs/examples/exceptions/: header_not_in_table_exception.dpl  index_string_exception.dpl  procedure_call_undefined_exception.dpl  table_column_not_same_size_exception.dpl  union_not_on_tables_exception.dpl
grammar/: DplLexer.g4  DplParser.g4  DplParser_old.g4
include/: Main.hpp
include/src/: AstVisitor.hpp  BreakValue.hpp  ContinueValue.hpp  Evaluator.hpp  ReturnValue.hpp  Symbol.hpp  SymbolTable.hpp  SymbolTableEntry.hpp  SymbolType.hpp  TypeChecker.hpp  Value.hpp  trash
include/src/ast/: AstBuilder.hpp  AstNode.hpp  AstTestVisitor.hpp  AstVisitor.hpp
include/src/ast/nodes/: AllNodeIncludes.hpp  AndExprNode.hpp  ArthExprNode.hpp  AssignNode.hpp  AstNode.hpp  BreakNode.hpp  ChargedNode.hpp  ColumnNode.hpp  CompExprNode.hpp  ContinueNode.hpp  DivExprNode.hpp  ElseNode.hpp  EqualExprNode.hpp  ExpoExprNode.hpp  FilterNode.hpp  GreaterEqualExprNode.hpp  GreaterExprNode.hpp  HeaderIndexNode.hpp  IfNode.hpp  IndexNode.hpp  IntersectionExprNode.hpp  JuncExprNode.hpp  LeafNode.hpp  LessEqualExprNode.hpp  LessExprNode.hpp  ListNode.hpp  MinusExprNode.hpp  MinusNode.hpp  ModExprNode.hpp  MultExprNode.hpp  NotEqualExprNode.hpp  NotNode.hpp  OrExprNode.hpp  ParNode.hpp  PlusExprNode.hpp  PlusNode.hpp  ProcCallNode.hpp  ProcDecNode.hpp  ProgNode.hpp  ReturnNode.hpp  (+5 more)
include/src/ast/nodes/abstract/: AstNode.hpp  BinaryNode.hpp  ChildNode.hpp  ChildNodeList.hpp  LeafNode.hpp  UnaryNode.hpp  UnaryNodeList.hpp
include/src/ast/nodes/abstract.hpp/: AstNode.hpp  BinaryNode.hpp  ChildNode.hpp  ChildNodeList.hpp  UnaryNode.hpp
include/src/error-handling/: DplErrorStrategy.hpp  DplException.hpp  LexerErrorListener.hpp  ParserErrorListener.hpp
include/src/error-handling/exceptions/: ArgumentException.hpp  AstException.hpp  DplException.hpp  InternalException.hpp  LexerException.hpp  ParserException.hpp  RuntimeException.hpp
include/src/symbol-table/: Procedure.hpp  ProcedureTable.hpp  Symbol.hpp  Variable.hpp  VariableTable.hpp
include/src/symbol_table/: ProcId.hpp  Procedure.hpp  ProcedureTable.hpp  Symbol.hpp  SymbolTable.hpp  Type.hpp  Variable.hpp  VariableTable.hpp
include/tests/: AstTestVisitor.hpp  TestingUtil.hpp
lib/antlr/Cpp/: CMakeLists.txt
lib/argz/: argz.hpp
nodes/: AllNodeIncludes.hpp  ColumnNode.hpp  CompExprNode.hpp  FilterNode.hpp  HeaderIndexNode.hpp  IfNode.hpp  IndexNode.hpp  JuncExprNode.hpp  ListNode.hpp  ProcCallNode.hpp  ProcDecNode.hpp  ReturnNode.hpp  TableNode.hpp
scripts/: bench.sh  compile.sh  generate_coverage.sh  linter.sh  memcheck.sh
src/: CMakeLists.txt  DplParser.g4  Evaluator.cpp  Main.cpp  Main.hpp  ProcedureTable.cpp  StandardLibrary.cpp  SymbolTable.cpp  SymbolTable.hpp  SymbolType.cpp  TLexer.g4  TParser.g4  Type.cpp  TypeChecker.cpp  Value.cpp  VariableTable.cpp
src/ast/: AstBuilder.cpp  AstTestVisitor.cpp  AstVisitor.cpp  ProgNode.cpp
src/ast/nodes/: ArthExprNode.cpp  AssignNode.cpp  ColumnNode.cpp  CompExprNode.cpp  ElseNode.cpp  FilterNode.cpp  HeaderIndexNode.cpp  IfNode.cpp  IndexNode.cpp  JuncExprNode.cpp  LeafNode.cpp  ListNode.cpp  NotNode.cpp  ParNode.cpp  ProcCallNode.cpp  ProcDecNode.cpp  ProgNode.cpp  ReturnNode.cpp  TableNode.cpp  UnaryExprNode.cpp  WhileNode.cpp
src/ast/nodes/abstract/: AstNode.cpp  BinaryNode.cpp  ChildNode.cpp  ChildNodeList.cpp  LeafNode.cpp  UnaryNode.cpp  UnaryNodeList.cpp
src/cmake/: README.md
src/grammar/: DplLexer.g4
src/symbaltable/: SymbolTable.cpp  SymbolTableEntry.cpp  SymbolType.cpp
src/typechecker/: TypeChecker.cpp
tests/: CMakeLists.txt  GcdLexerTest.cpp  LexerTest.cpp  Test.hpp  TestingUtil.cpp  TestingUtil.hpp
tests/acceptance_test/: horse-colic.csv  missing_value_test.dpl  outlier_test.dpl
tests/ast/: BreakParserTest.cpp  ContinueParserTest.cpp  GcdParserTest.cpp  MathParserTest.cpp  QuicksortParserTest.cpp  ReplaceWithParserTest.cpp
tests/eval/: BreakEvalTest.cpp  ContinueEvalTest.cpp  EvalExceptions.cpp  GcdEvalTest.cpp  IfNodeEvalTest.cpp  MathEvalTest.cpp  NotAndOrEvalTest.cpp  QuicksortEvalTest.cpp  ReplaceWithEvalTest.cpp  StdLibraryEvalTest.cpp  TableOperation.cpp  TableOperationEvalTest.cpp  WhileNodeEvalTest.cpp
tests/eval/exception_example/: assign_leftside_exception.dpl  assign_unequal_column_exception.dpl  column_out_of_range_exception.dpl  filter_column_exception.dpl  header_not_on_table_exception.dpl  index_not_indexable_exception.dpl  index_not_integer_exception.dpl  index_out_of_range_exception.dpl  intersection_not_on_tables_exception.dpl  intersection_not_same_header_exception.dpl  intersection_table_not_same_size_exception.dpl  procedure_call_incorrect_param_amount_exception.dpl  string_out_of_range_exception.dpl  table_header_not_string_exception.dpl  table_value_not_list_exception.dpl
tests/lexer/: BreakLexerTest.cpp  ContinueLexerTest.cpp  GcdLexerTest.cpp  MathLexerTest.cpp  QuicksortLexerTest.cpp  ReplaceWithLexerTest.cpp
tests/parser/: BreakParserTest.cpp  ContinueParserTest.cpp  GcdParserTest.cpp  MathParserTest.cpp  QuicksortParserTest.cpp  ReplaceWithParserTest.cpp
tests/symbol-table/: SymbolTableTest.cpp  ValueTest.cpp  VariableTableTest.cpp
